--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,7 +73,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js"
+    entryFile: "index.js",
+    bundleCommand: "unbundle"
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -94,8 +95,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.0'
 
     defaultConfig {
         applicationId "com.bukaservis"
@@ -137,11 +138,26 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-i18n')
-    compile project(':react-native-vector-icons')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation (project(':react-native-firebase')) {
+        transitive = false
+    }
+    implementation project(':react-native-i18n')
+    implementation project(':react-native-vector-icons')
+    implementation(project(':react-native-maps')){
+        exclude group: 'com.google.android.gms', module: 'play-services-base'
+        exclude group: 'com.google.android.gms', module: 'play-services-maps'
+    }
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.facebook.react:react-native:+'  // From node_modules
+
+    implementation 'com.google.android.gms:play-services-base:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-firestore:12.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -150,3 +166,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
