--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "apisauce": "^0.14.2",
+    "firebase": "^5.0.4",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.10",
@@ -39,12 +40,13 @@
     "react-native-clean-form": "^0.5.0",
     "react-native-config": "^0.10.0",
     "react-native-dropdownalert": "^3.4.0",
-    "react-native-firebase": "^4.2.0",
+    "react-native-firebase": "^4.0.4",
     "react-native-gesture-handler": "^1.0.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-i18n": "^1.0.0",
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.1.0",
+    "react-native-rating": "^2.0.4",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-tab-view": "0.0.78",
     "react-native-vector-icons": "^4.3.0",
