--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,10 +156,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:12.0.0'
     implementation 'com.google.android.gms:play-services-maps:12.0.0'
 
-    implementation "com.google.firebase:firebase-core:12.0.0"
-    implementation "com.google.firebase:firebase-firestore:12.0.0"
-    implementation "com.google.firebase:firebase-database:12.0.0"
-    implementation "com.google.firebase:firebase-auth:12.0.0"
+    implementation 'com.google.firebase:firebase-core:12.0.0'
+    implementation 'com.google.firebase:firebase-firestore:12.0.0'
+    implementation 'com.google.firebase:firebase-database:12.0.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
