--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-modal": "^6.1.0",
     "react-native-rating": "^2.0.4",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-star-rating": "^1.0.9",
     "react-native-tab-view": "0.0.78",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.5.11",
@@ -58,6 +59,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
+    "redux-saga-firebase": "^0.13.0",
     "reduxsauce": "0.7.0",
     "seamless-immutable": "^7.1.3"
   },
