--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "git-hook": "npm run lint -s && npm run test -s"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "apisauce": "^0.14.2",
     "firebase": "^5.0.4",
     "format-json": "^1.0.3",
