--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "redux-saga": "^0.16.0",
     "redux-saga-firebase": "^0.13.0",
     "reduxsauce": "0.7.0",
-    "seamless-immutable": "^7.1.3"
+    "seamless-immutable": "^7.1.3",
+    "why-did-you-update": "^0.1.1"
   },
   "devDependencies": {
     "@storybook/addon-storyshots": "^3.4.0",
