--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-navigation-redux-helpers": "^1.0.4",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.5",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
