--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "apisauce": "^0.14.2",
     "firebase": "^5.0.4",
     "format-json": "^1.0.3",
+    "geofirestore": "^1.2.0",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "native-base": "^2.4.5",
     "prop-types": "^15.6.1",
     "querystringify": "1.0.0",
@@ -49,6 +51,7 @@
     "react-native-modal": "^6.1.0",
     "react-native-rating": "^2.0.4",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-snap-carousel": "^3.7.2",
     "react-native-star-rating": "^1.0.9",
     "react-native-tab-view": "0.0.78",
     "react-native-vector-icons": "^4.3.0",
