--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@mapbox/polyline": "^1.0.0",
     "apisauce": "^0.14.2",
+    "deep-equal": "^1.0.1",
+    "fast-deep-equal": "^2.0.1",
     "firebase": "^5.0.4",
     "format-json": "^1.0.3",
     "geofirestore": "^1.2.0",
@@ -47,14 +49,17 @@
     "react-native-gesture-handler": "^1.0.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-i18n": "^1.0.0",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.1.0",
     "react-native-rating": "^2.0.4",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-star-rating": "^1.0.9",
     "react-native-tab-view": "0.0.78",
     "react-native-vector-icons": "^4.3.0",
+    "react-native-view-overflow": "0.0.3",
     "react-navigation": "^1.5.11",
     "react-navigation-redux-helpers": "^1.0.4",
     "react-redux": "^5.0.6",
