--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+android.enableAapt2=false
+
+MYAPP_RELEASE_STORE_FILE=bukaservis-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=bukaservis-keystore
+MYAPP_RELEASE_STORE_PASSWORD=qa][ws';edlk2308
+MYAPP_RELEASE_KEY_PASSWORD=qa][ws';edlk2308
