--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "16.3.1",
     "react-native": "0.55.1",
     "react-native-action-button": "^2.8.4",
+    "react-native-android-location-services-dialog-box": "^2.7.0",
     "react-native-animatable": "^1.2.4",
     "react-native-clean-form": "^0.5.0",
     "react-native-config": "^0.10.0",
@@ -56,6 +57,7 @@
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-star-rating": "^1.0.9",
     "react-native-tab-view": "0.0.78",
     "react-native-vector-icons": "^4.3.0",
