--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-splash-screen')
     implementation project(':react-native-android-location-services-dialog-box')
     implementation project(':react-native-view-overflow')
     implementation project(':react-native-linear-gradient')
