--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-gifted-chat": "^0.4.3",
     "react-native-i18n": "^1.0.0",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-loader": "^1.2.1",
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.1.0",
     "react-native-rating": "^2.0.4",
