--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.1.0",
     "react-native-rating": "^2.0.4",
+    "react-native-restart": "0.0.7",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.7.2",
